# new-core

./: CMakeLists.txt
.github/workflows/: build.yml
chotkeys/: CMakeLists.txt  application.cpp  main.cpp
clipboard/: CMakeLists.txt  clipboard.cpp  clipboard.h  main.cpp
cpufreq/: CMakeLists.txt  com.yoyo.cpufreq.pkexec.policy.in  main.cpp
debian/: changelog  control  copyright  postinst  prerm
gmenuproxy/: CMakeLists.txt  dbusmenuadaptor.cpp  dbusmenuadaptor.h  yoyo-gmenuproxy.service.in
notificationd/: CMakeLists.txt  application.cpp  application.h  com.yoyo.Notification.xml  historymodel.cpp  historymodel.h  main.cpp  notification.cpp  notification.h  notificationpopup.cpp  notificationpopup.h  notificationserver.cpp  notificationwindow.cpp  notificationwindow.h  screenhelper.cpp  screenhelper.h  settings.cpp  settings.h  utils.cpp  utils.h
notificationd/dbus/: notificationsadaptor.cpp  notificationsadaptor.h
notificationd/qml/: IconButton.qml  NotificationWindow.qml  QmlNotificationPopup.qml  main.qml
polkit-agent/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp  polkitagentlistener.cpp  polkitagentlistener.h  yoyo-polkit-agent.desktop
powerman/: CMakeLists.txt  application.cpp  application.h  com.yoyo.PowerManager.xml  dimdisplayaction.cpp  main.cpp
powerman/cpu/: cpuitem.cpp  (+4 more)
screen-brightness/: CMakeLists.txt  brightnesshelper.cpp  brightnesshelper.h  com.yoyo.brightness.pkexec.policy.in  main.cpp
sddm-helper/: CMakeLists.txt  com.yoyo.sddm.helper.pkexec.policy.in  main.cpp
session/: CMakeLists.txt  application.cpp  application.h  com.yoyo.Session.xml  main.cpp  networkproxymanager.cpp  networkproxymanager.h  process.cpp  process.h  processmanager.cpp  processmanager.h  yoyo-xsession.desktop
settings-daemon/: CMakeLists.txt  application.cpp  application.h  dbusadaptor.h  main.cpp
shutdown-ui/: CMakeLists.txt  IconButton.qml  actions.cpp  actions.h  main.cpp  main.qml
xembed-sni-proxy/: CMakeLists.txt  debug.cpp
(+20 files in other folders)
